corret names camelcase

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,7 +10,7 @@
   box-shadow: 5px 5px theme.$secondary-color;
 }
 
-.logoimage {
+.logoImage {
   height: 150px;
   margin-left: 10px;
 }
@@ -26,18 +26,18 @@
   align-items: center;
   justify-content: space-around;
 }
-.stripeone {
+.stripeOne {
   background-color: theme.$hightlight-color;
   height: 8px;
   width: 100px;
   margin-top: 10px;
 }
-.stripetwo {
+.stripeTwo {
   background-color: theme.$hightlight-color;
   height: 8px;
   width: 100px;
 }
-.stripethree {
+.stripeThree {
   background-color: theme.$hightlight-color;
   height: 8px;
   width: 100px;
